# integral-tools

./: CMakeLists.txt  Makefile  all  includes.h
Calc/: CMakeLists.txt  Makefile  main.cpp  print_err.cpp
Calc/include/: vars.h
Combination/: CMakeLists.txt  ComC.cpp  ComP.cpp  Makefile  main.cpp
Combination/include/: combinc.h  combinp.h  in.h  includes.h
Core/: Makefile  core.cpp
PrimeNum/: CMakeLists.txt  Makefile  PrimeNumberChecker.cpp  PrimeNumberFactorizer.cpp  PrimeNumberGenerator.cpp  main.cpp
PrimeNum/include/: chk.h  factorization.h  gen.h  global_vars.h  includes.h
